// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Google Authenticator Enroll Transformer Tests should add Stepper layout to UI Schema elements when GA Enroll params exists in Idx response 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.enroll.google_authenticator.setup.title",
        },
        "type": "Title",
      },
      Object {
        "elements": Array [
          Object {
            "elements": Array [
              Object {
                "contentType": "subtitle",
                "noMargin": true,
                "options": Object {
                  "content": "oie.enroll.google_authenticator.scanBarcode.title",
                  "dataSe": "barcode-setup-title",
                  "level": 3,
                  "visualLevel": 5,
                },
                "type": "Heading",
                "viewIndex": 0,
              },
              Object {
                "contentType": "subtitle",
                "options": Object {
                  "content": "oie.enroll.google_authenticator.scanBarcode.description",
                  "dataSe": "google-authenticator-setup-info",
                },
                "type": "Description",
                "viewIndex": 0,
              },
              Object {
                "options": Object {
                  "data": "#mockhref",
                },
                "type": "QRCode",
                "viewIndex": 0,
              },
              Object {
                "label": "oie.enroll.google_authenticator.scanBarcode.cannotScan",
                "options": Object {
                  "nextStepIndex": 1,
                  "type": "button",
                  "variant": "secondary",
                },
                "type": "StepperButton",
                "viewIndex": 0,
              },
              Object {
                "label": "oform.next",
                "options": Object {
                  "nextStepIndex": 2,
                  "type": "button",
                  "variant": "primary",
                },
                "type": "StepperButton",
                "viewIndex": 0,
              },
            ],
            "type": "VerticalLayout",
          },
          Object {
            "elements": Array [
              Object {
                "contentType": "subtitle",
                "noMargin": true,
                "options": Object {
                  "content": "oie.enroll.google_authenticator.cannotScanBarcode.title",
                  "dataSe": "manual-setup-title",
                  "level": 3,
                  "visualLevel": 5,
                },
                "type": "Heading",
                "viewIndex": 1,
              },
              Object {
                "contentType": "subtitle",
                "options": Object {
                  "content": "oie.enroll.google_authenticator.manualSetupInstructions",
                  "dataSe": "google-authenticator-setup-info",
                },
                "type": "Description",
                "viewIndex": 1,
              },
              Object {
                "contentType": "subtitle",
                "noTranslate": true,
                "options": Object {
                  "content": "A B C 1 2 3 D E F 4 5 6",
                },
                "type": "Description",
                "viewIndex": 1,
              },
              Object {
                "label": "oform.next",
                "options": Object {
                  "nextStepIndex": 2,
                  "type": "button",
                  "variant": "primary",
                },
                "type": "StepperButton",
                "viewIndex": 1,
              },
            ],
            "type": "VerticalLayout",
          },
          Object {
            "elements": Array [
              Object {
                "contentType": "subtitle",
                "options": Object {
                  "content": "oie.enroll.google_authenticator.enterCode.title",
                  "dataSe": "enter-code-title",
                },
                "type": "Description",
                "viewIndex": 2,
              },
              Object {
                "options": Object {
                  "inputMeta": Object {
                    "name": "credentials.passcode",
                  },
                },
                "type": "Field",
                "viewIndex": 2,
              },
              Object {
                "label": "oform.verify",
                "options": Object {
                  "step": "enroll-authenticator",
                  "type": "submit",
                },
                "type": "Button",
                "viewIndex": 2,
              },
            ],
            "type": "VerticalLayout",
          },
        ],
        "type": "Stepper",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Google Authenticator Enroll Transformer Tests should add Stepper layout to UI Schema elements when GA Reset params exists in Idx response 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.enroll.google_authenticator.setup.title",
        },
        "type": "Title",
      },
      Object {
        "elements": Array [
          Object {
            "elements": Array [
              Object {
                "contentType": "subtitle",
                "noMargin": true,
                "options": Object {
                  "content": "oie.enroll.google_authenticator.scanBarcode.title",
                  "dataSe": "barcode-setup-title",
                  "level": 3,
                  "visualLevel": 5,
                },
                "type": "Heading",
                "viewIndex": 0,
              },
              Object {
                "contentType": "subtitle",
                "options": Object {
                  "content": "oie.enroll.google_authenticator.scanBarcode.description",
                  "dataSe": "google-authenticator-setup-info",
                },
                "type": "Description",
                "viewIndex": 0,
              },
              Object {
                "options": Object {
                  "data": "#mockhref",
                },
                "type": "QRCode",
                "viewIndex": 0,
              },
              Object {
                "label": "oie.enroll.google_authenticator.scanBarcode.cannotScan",
                "options": Object {
                  "nextStepIndex": 1,
                  "type": "button",
                  "variant": "secondary",
                },
                "type": "StepperButton",
                "viewIndex": 0,
              },
              Object {
                "label": "oform.next",
                "options": Object {
                  "nextStepIndex": 2,
                  "type": "button",
                  "variant": "primary",
                },
                "type": "StepperButton",
                "viewIndex": 0,
              },
            ],
            "type": "VerticalLayout",
          },
          Object {
            "elements": Array [
              Object {
                "contentType": "subtitle",
                "noMargin": true,
                "options": Object {
                  "content": "oie.enroll.google_authenticator.cannotScanBarcode.title",
                  "dataSe": "manual-setup-title",
                  "level": 3,
                  "visualLevel": 5,
                },
                "type": "Heading",
                "viewIndex": 1,
              },
              Object {
                "contentType": "subtitle",
                "options": Object {
                  "content": "oie.enroll.google_authenticator.manualSetupInstructions",
                  "dataSe": "google-authenticator-setup-info",
                },
                "type": "Description",
                "viewIndex": 1,
              },
              Object {
                "contentType": "subtitle",
                "noTranslate": true,
                "options": Object {
                  "content": "A B C 1 2 3 D E F 4 5 6",
                },
                "type": "Description",
                "viewIndex": 1,
              },
              Object {
                "label": "oform.next",
                "options": Object {
                  "nextStepIndex": 2,
                  "type": "button",
                  "variant": "primary",
                },
                "type": "StepperButton",
                "viewIndex": 1,
              },
            ],
            "type": "VerticalLayout",
          },
          Object {
            "elements": Array [
              Object {
                "contentType": "subtitle",
                "options": Object {
                  "content": "oie.enroll.google_authenticator.enterCode.title",
                  "dataSe": "enter-code-title",
                },
                "type": "Description",
                "viewIndex": 2,
              },
              Object {
                "options": Object {
                  "inputMeta": Object {
                    "name": "credentials.passcode",
                  },
                },
                "type": "Field",
                "viewIndex": 2,
              },
              Object {
                "label": "oform.verify",
                "options": Object {
                  "step": "reset-authenticator",
                  "type": "submit",
                },
                "type": "Button",
                "viewIndex": 2,
              },
            ],
            "type": "VerticalLayout",
          },
        ],
        "type": "Stepper",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
